# drf_bood

./: .env  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
bood/: settings.py  urls.py
bood_account/: admin.py  models.py  tests.py  urls.py  validators.py  views.py
bood_account/migrations/: 0001_initial.py  0002_alter_person_email_alter_person_name.py
bood_account/templates/: activation.html  confirmation.html
bood_app/: admin.py  api_docs.py  documents.py  models.py  serializers.py  urls.py  views.py
bood_app/migrations/: 0001_initial.py  0002_productcategory_alter_faq_options_and_more.py  0003_alter_product_microelements_alter_product_vitamins.py  0004_alter_personcard_target.py  0005_alter_personcard_target.py
bood_app/services/: calculate.py  kbjy.py  recommendation.py
bood_app/tests/: base_classes.py  test_eating.py  test_personcard.py  test_recipes.py  test_recommendation.py
bood_app/utils/: cache.py  calculate_date_validation.py
bood_app/utils/serializers/: calculate_date_validation.py  eating_validation.py  person_card_validation.py  product_weight_create.py
nginx/: default.conf
